--- a/headline/templates/base.html
+++ b/headline/templates/base.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="wrap">
+			<header>
+				<h1>Headline History (Beta)</h1>
+			</header>
             {% block content %}{% endblock %}
         </div>
     </body>
