--- a/headline/templates/home.html
+++ b/headline/templates/home.html
@@ -1,15 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-<ul>{% for headline in headlines %}
-    <li>
-        <dl>
-            <dt>언론사</dt>
-            <dd>{{ headline.press.name }}</dd>
-            <dt>헤드라인</dt>
-            <dd><a href="{{ headline.link }}">{{ headline.title }}</a></dd>
-            <dt>확인된 시각</dt>
-            <dd>{{ headline.crawled_time|date:"y-m-d G:H:i" }}</dd>
-        </dl>
-    </li>
-{% endfor %}</ul>
+<section>
+	<ul>{% for headline in headlines %}
+		<li>
+			<article>
+				<h1>{{ headline.press.name}}</h1>
+				<a href="{{ headline.link }}">{{ headline.title }}</a> <small>({{ headline.crawled_time|date:"y-m-d G:H:i" }})</small>
+			</article>
+		</li>
+	{% endfor %}</ul>
+</section>
 {% endblock %}
