--- a/headline/templates/base.html
+++ b/headline/templates/base.html
@@ -5,10 +5,13 @@
     </head>
     <body>
         <div id="wrap">
-			<header>
-				<h1>Headline History (Beta)</h1>
-			</header>
+            <header>
+                <h1>Headline History (Beta)</h1>
+            </header>
             {% block content %}{% endblock %}
+            <footer>
+                도와준 사람들 : 김승연, 송시후, 변규홍, 이유진, 이윤석, 노대영, 명미소, 설진석, 공정언론(익명)
+            </footer>
         </div>
     </body>
 </html>
