--- a/headline/templates/base.html
+++ b/headline/templates/base.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Headline History</title>
-    </head>
-    <body>
-        <div id="wrap">
-			<header>
-				<h1>Headline History (Beta)</h1>
-			</header>
-            {% block content %}{% endblock %}
-        </div>
-    </body>
+<head>
+  <title>Headline History</title>
+  <script src="/static/jquery-1.10.2.min.js"></script>
+  <script src="/static/headline.js"></script>
+</head>
+<body>
+<div id="wrap">
+  <header>
+    <h1>Headline History (Beta)</h1>
+  </header>
+  {% block content %}{% endblock %}
+</div>
+</body>
 </html>
