Git ignore fixed, js fixed, contributor chagned

--- a/headline/templates/base.html
+++ b/headline/templates/base.html
@@ -21,7 +21,7 @@
   {% block content %}{% endblock %}
 </div>
 <footer>
-    도와준 사람들 : 김승연, 송시후, 변규홍, 이유진, 이윤석, 노대영, 명미소, 설진석, 공정언론(익명)
+    도와준 사람들 : 송시후, 변규홍, 이유진, 이윤석, 노대영, 명미소, 설진석 외 익명 2명
 </footer>
 </body>
 </html>
