bootstrapped default layout

--- a/headline/templates/home.html
+++ b/headline/templates/home.html
@@ -1,15 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 <section>
-  <ul id="headline-list">{% for headline in headlines %}
-    <li>
-      <article class="headline" data-id="{{ headline.id }}">
-        <h1>{{ headline.press.name }}</h1>
-        <a href="{{ headline.link }}">{{ headline.title }}</a> <small>({{ headline.crawled_time|date:"y-m-d G:H:i" }})</small>
-      </article>
-    </li>
-    {% endfor %}
+  <ul id="headline-list" class="list-group">
+  	{% for headline in headlines %}
+  	<li class="list-group-item">
+  		<article class="headline" data-id="{{ headline.id }}">
+	  		<h4 class="list-group-item-heading">
+	  			<b>{{ headline.press.name }}</b>
+	  			<span class="badge pull-right">{{ headline.crawled_time|date:"y-m-d G:H:i" }}</span>
+	  		</h4>
+	  		<p class="list-group-item-text">
+		  		<a href="{{ headline.link }}">{{ headline.title }}</a>
+	  		</p>
+  		</article>
+  	</li>
+  	{% endfor %}
   </ul>
-  <a href="/more/{{ headlines.last.id }}" id="get-more">더 보기</a>
+  <a href="/more/{{ headlines.last.id }}" id="get-more" class="btn btn-default form-control">더 보기</a>
 </section>
 {% endblock %}
