--- a/headline/templates/base.html
+++ b/headline/templates/base.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Headline History</title>
-  <script src="/static/jquery-1.10.2.min.js"></script>
-  <script src="/static/headline.js"></script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-     ga('create', 'UA-46707355-1', 'headline-history.com');
-    ga('send', 'pageview');
-  </script>
-</head>
-<body>
-<div id="wrap">
-  <header>
-    <h1>Headline History (Beta)</h1>
-  </header>
-  {% block content %}{% endblock %}
-</div>
-<footer>
-    도와준 사람들 : 송시후, 변규홍, 이유진, 이윤석, 노대영, 명미소, 설진석 외 익명 2명
-</footer>
-</body>
+<html lang="en">
+  <head>
+    <title>Headline History</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/bootstrap.min.css" />
+    <link rel="stylesheet" href="/static/headline.css" />
+    <script src="/static/jquery-1.10.2.min.js"></script>
+    <script src="/static/bootstrap.min.js"></script>
+    <script src="/static/headline.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+       ga('create', 'UA-46707355-1', 'headline-history.com');
+      ga('send', 'pageview');
+    </script>
+  </head>
+  <body>
+  	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  		<div class="container">
+	      <div class="navbar-header">
+	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-right">
+			      <span class="sr-only">Toggle navigation</span>
+			      <span class="icon-bar"></span>
+			      <span class="icon-bar"></span>
+			      <span class="icon-bar"></span>
+			    </button>
+	        <a class="navbar-brand" href="/">Headline History Beta</a>
+	      </div>
+	      <!-- todo: search backend
+		    <div class="collapse navbar-collapse" id="nav-right">
+			    <form class="navbar-form navbar-right" role="search" action="/" method="get">
+			      <div class="form-group">
+			        <input type="text" class="form-control" placeholder="언론사" name="q" value="{{ query }}">
+			      </div>
+			      <button type="submit" class="btn btn-default">검색</button>
+			    </form>
+			  </div>
+			  -->
+  		</div>
+    </nav>
+    <div id="wrap" class="container">
+      {% block content %}{% endblock %}
+    </div>
+    <footer id="footer" class="container text-center">
+        <h4>도와준 사람들</h4>
+        <p>송시후, 변규홍, 이유진, 이윤석, 노대영, 명미소, 설진석 외 익명 2명</p>
+    </footer>
+  </body>
 </html>
