--- a/headline/templates/base.html
+++ b/headline/templates/base.html
@@ -9,6 +9,7 @@
     <script src="/static/jquery-1.10.2.min.js"></script>
     <script src="/static/bootstrap.min.js"></script>
     <script src="/static/headline.js"></script>
+    <script src="/static/handlebars-v1.2.0.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
