--- a/headline/templates/base.html
+++ b/headline/templates/base.html
@@ -25,16 +25,14 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="/">Headline History Beta</a>
         </div>
-        <!-- todo: search backend
         <div class="collapse navbar-collapse" id="nav-right">
           <form class="navbar-form navbar-right" role="search" action="/" method="get">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="언론사" name="q" value="{{ query }}">
+              <input type="text" class="form-control" placeholder="언론사 및 기사 제목" name="q" value="{{ query }}">
             </div>
             <button type="submit" class="btn btn-default">검색</button>
           </form>
         </div>
-        -->
       </div>
     </nav>
     <div id="wrap" class="container">
