--- a/headline/templates/base.html
+++ b/headline/templates/base.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="nav-right">
           <form class="navbar-form navbar-right" role="search" action="/" method="get">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="언론사 및 기사 제목" name="q" value="{{ query }}">
+              <input id="query" type="text" class="form-control" placeholder="언론사 및 기사 제목" name="q" value="{{ query }}">
             </div>
             <button type="submit" class="btn btn-default">검색</button>
           </form>
